bad/bin_op_and_void_void.example_compiler_output
ERROR
[1mbad/bin_op_and_void_void.lat:4:8: [1;31merror: [0;1moperator && is defined only for `boolean` values, not `void` and `void`[m
	foo() && foo();
	      [1;32m^[m
